--- a/packages/website/src/layouts/Layout.astro
+++ b/packages/website/src/layouts/Layout.astro
@@ -1,11 +1,11 @@
 ---
 import SidebarItem from 'src/components/SidebarItem.astro';
 
-export interface Props {
-  title: string;
+interface Props {
+  title: string
 }
 
-const specPages = await Astro.glob("../pages/spec/**/*.mdx");
+const specPages = await Astro.glob("../pages/spec/**/*.(mdx|md)");
 
 const { title } = Astro.props;
 ---
@@ -24,7 +24,7 @@ const { title } = Astro.props;
       <div class="h-10 p-4 flex items-center bg-amber-100 text-lg font-bold">
         The Handlebars Language
       </div>
-      <div class="content flex flex-1">
+      <div class="flex flex-1">
         <aside class="p-4 w-64 flex-grow-0 flex-shrink-0 bg-orange-100">
           <ul>
             {
@@ -38,7 +38,7 @@ const { title } = Astro.props;
             }
           </ul>
         </aside>
-        <div class="p-4">
+        <div class="content p-4">
           <slot />
         </div>
       </div>
@@ -46,15 +46,6 @@ const { title } = Astro.props;
   </body>
 </html>
 <style is:global>
-  :root {
-    --accent: 124, 58, 237;
-    --accent-gradient: linear-gradient(
-      45deg,
-      rgb(var(--accent)),
-      #da62c4 30%,
-      white 60%
-    );
-  }
   html {
     font-family: system-ui, sans-serif;
     background-color: #f6f6f6;
@@ -65,22 +56,26 @@ const { title } = Astro.props;
   }
 
   .content h1 {
-    @apply text-amber-900 text-3xl font-bold;
+    @apply text-amber-900 text-3xl font-bold mt-10 mb-10;
   }
 
   .content h2 {
-    @apply text-amber-900 text-2xl font-bold;
+    @apply text-amber-900 text-2xl font-bold mt-5 mb-5;
   }
 
   .content h3 {
-    @apply text-amber-900 text-xl font-bold;
+    @apply text-amber-900 text-xl font-bold mt-3 mb-3;
   }
 
   .content h4 {
-    @apply text-amber-900 text-xl;
+    @apply text-amber-900 text-xl mt-2 mb-2;
   }
 
   .content h5 {
-    @apply text-amber-900 text-lg;
+    @apply text-amber-900 text-lg mt-1 mb-1;
+  }
+  
+  .content ul {
+    @apply list-disc list-inside mt-2 mb-2 ml-4;
   }
 </style>
