--- a/packages/@handlebars-ng/specification/src/layouts/MarkdownLayout.astro
+++ b/packages/@handlebars-ng/specification/src/layouts/MarkdownLayout.astro
@@ -1,13 +1,12 @@
 ---
-import type { MarkdownLayoutProps } from 'astro';
-import Layout from './Layout.astro';
+import type { MarkdownLayoutProps } from "astro";
+import Layout from "./Layout.astro";
 
 type Props = MarkdownLayoutProps<{
   title: string;
-}>
+}>;
 
 const { frontmatter } = Astro.props;
 ---
-
 
 <Layout title={frontmatter.title}><slot /></Layout>
