some layout adjustments

--- a/packages/@handlebars-ng/specification/src/pages/index.astro
+++ b/packages/@handlebars-ng/specification/src/pages/index.astro
@@ -2,9 +2,8 @@
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Handlebars - next generation">
   <main>
-    <h1>The handlebars language</h1>
-   
+    
   </main>
 </Layout>
