--- a/packages/@handlebars-ng/specification/src/layouts/Layout.astro
+++ b/packages/@handlebars-ng/specification/src/layouts/Layout.astro
@@ -22,11 +22,11 @@ const { title } = Astro.props;
   <body class="h-full">
     <div class="flex flex-col h-full">
       <div class="h-10 p-4 flex items-center bg-amber-100 text-lg font-bold">
-        The Handlebars Language
+        <a href="/">The Handlebars Language</a>
       </div>
       <div class="flex flex-1">
         <aside class="p-4 w-64 flex-grow-0 flex-shrink-0 bg-orange-100">
-          <ul>
+          <ul class="sticky top-1">
             {
               specPages.map((page) => {
                 return (
@@ -42,6 +42,10 @@ const { title } = Astro.props;
           </ul>
         </aside>
         <div class="content p-4">
+          <div class="font-bold bg-red-100 text-red-900 p-2">
+            This project is in an early work-in-progress stage.
+            <a href="https://github.com/nknapp/handlebars-ng">Contribute</a>
+          </div>
           <slot />
         </div>
       </div>
@@ -78,21 +82,29 @@ const { title } = Astro.props;
     @apply text-amber-900 text-lg mt-1 mb-1;
   }
 
+  .content h1:first-child,
+  .content h2:first-child,
+  .content h3:first-child,
+  .content h4:first-child,
+  .content h5:first-child {
+    @apply mt-0;
+  }
+
+
   .content ul {
     @apply list-disc list-inside mt-2 mb-2 ml-4;
   }
 
   .content .astro-code {
     @apply p-1;
-  } 
-
+  }
 
   /* Inspired by https://sylvaindurand.org/using-css-to-add-line-numbering/ */
   .content .astro-code code {
     counter-reset: line;
   }
 
-  .content  .astro-code .line {
+  .content .astro-code .line {
     counter-increment: line;
     overflow: visible;
     display: inline-block;
@@ -102,7 +114,7 @@ const { title } = Astro.props;
   .content .astro-code .line:before {
     content: counter(line);
     user-select: none;
-    @apply text-slate-500 mr-2
+    @apply text-slate-500 mr-2;
   }
 
   .content .astro-code .line:nth-child(2n) {
@@ -113,14 +125,21 @@ const { title } = Astro.props;
     @apply bg-slate-700;
   }
 
-
-  .content .invisible-chars  .astro-code .line:not(:last-child):after {
+  .content .invisible-chars .astro-code .line:not(:last-child):after {
     content: "⏎";
-    @apply text-slate-300
+    @apply text-slate-300;
   }
 
-  .content .invisible-chars  .astro-code .line:last-child:after {
+  .content .invisible-chars .astro-code .line:last-child:after {
     content: " ";
   }
 
+  .content a {
+    @apply underline underline-offset-4;
+  }
+  
+  .content a:hover {
+    background-color: rgba(127,127,127, 0.1);
+    outline: 5px solid rgba(127,127,127, 0.1);
+    }
 </style>
