--- a/packages/@handlebars-ng/specification/src/layouts/Layout.astro
+++ b/packages/@handlebars-ng/specification/src/layouts/Layout.astro
@@ -1,4 +1,4 @@
----
+esk---
 import { Sidebar } from "@/components/Sidebar";
 import { SidebarButton } from "@/components/SidebarButton";
 import SidebarItem from "@/components/SidebarItem.astro";
@@ -24,11 +24,14 @@ const { title } = Astro.props;
   <body class="pt-12">
     <div class="">
       <div
-        class="fixed top-0 w-screen h-12 px-4 flex space-between items-center bg-amber-100 text-lg font-bold"
+        class="fixed top-0 w-screen bg-amber-100 text-lg font-bold"
       >
-        <a href="/">The Handlebars Language</a>
-        <div class="flex-1"></div>
-        <SidebarButton client:load />
+        <div class="flex space-between items-center h-12 px-4">
+          <SidebarButton client:load />
+          <div class="w-2"></div>
+          <a href="/">The Handlebars Language</a>
+          
+        </div>
       </div>
       <div class="fixed top-0 pt-12 w-0 h-full overflow-visible">
         <Sidebar client:load>
@@ -48,7 +51,7 @@ const { title } = Astro.props;
           </ul>
         </Sidebar>
       </div>
-      <div class="">
+      <div class="lg:ml-64">
         <div class="content p-4">
           <div class="font-bold bg-red-100 text-red-900 p-2">
             This project is in an early work-in-progress stage.
