--- a/packages/@handlebars-ng/specification/src/layouts/Layout.astro
+++ b/packages/@handlebars-ng/specification/src/layouts/Layout.astro
@@ -29,7 +29,9 @@ const { title } = Astro.props;
         <div class="flex space-between items-center h-12 px-4">
           <SidebarButton client:load />
           <div class="w-2"></div>
-          <a href="/">The Handlebars Language</a>
+          <a href="/">
+            <img src="/favicon.svg" class="h-8 mr-2 inline"> The Handlebars Language
+          </a>
           
         </div>
       </div>
