add simple mustaches to spec

--- a/packages/@handlebars-ng/specification/src/components/Testcase.astro
+++ b/packages/@handlebars-ng/specification/src/components/Testcase.astro
@@ -24,7 +24,7 @@ const prettyInput = prettier.format(JSON.stringify(spec.input), {
 });
 ---
 
-<div class="border-amber-900 border-2">
+<div class="testcase border-amber-900 border-2">
   <header class="bg-slate-200 p-2">
     <div class="text-lg">{filename}</div>
     <div>{spec.description}</div>
