--- a/packages/@handlebars-ng/specification/src/layouts/Layout.astro
+++ b/packages/@handlebars-ng/specification/src/layouts/Layout.astro
@@ -108,7 +108,7 @@ const { title } = Astro.props;
   }
 
   .content .astro-code {
-    @apply p-1;
+    @apply p-1 my-4;
   }
 
   /* Inspired by https://sylvaindurand.org/using-css-to-add-line-numbering/ */
@@ -120,6 +120,7 @@ const { title } = Astro.props;
     counter-increment: line;
     overflow: visible;
     display: inline-block;
+    width: 100%;
   }
 
   .content .astro-code .line:before {
@@ -152,5 +153,9 @@ const { title } = Astro.props;
   .content a:hover {
     background-color: rgba(127, 127, 127, 0.1);
     outline: 5px solid rgba(127, 127, 127, 0.1);
+  }
+
+  .content .testcase {
+    @apply my-4;
   }
 </style>
