--- a/packages/@handlebars-ng/specification/src/pages/index.astro
+++ b/packages/@handlebars-ng/specification/src/pages/index.astro
@@ -1,23 +1,23 @@
 ---
-import SidebarItem from "@/components/SidebarItem.astro";
-import Layout from "@/layouts/Layout.astro";
-
-const specPages = await Astro.glob("../pages/spec/**/*.(mdx|md)");
+import Card from "@/components/Card.astro";
+import Home from "@/layouts/Home.astro";
 ---
 
-<Layout title="Handlebars - next generation">
-  <main>
-    {
-      specPages.map((page) => {
-        return (
-          <li class="p-1">
-            <SidebarItem
-              href={page.url}
-              text={page.frontmatter.title as string}
-            />
-          </li>
-        );
-      })
-    }
-  </main>
-</Layout>
+<Home title="Handlebars - the next generation" logo="/images/logo-large.png">
+    <Card header="A new parser">
+      Implemented in clean code, thoroughly tested.
+    </Card>
+    <Card header="A new runtime">
+      Faster than before. Secure. 
+    </Card>
+    <Card header="Performance tests">
+      Visible performance tests to make sure it does not get slow again.
+      (TODO)
+    </Card>
+    <Card
+      header="Language Specification"
+      action={{ label: "Read the spec", href: "/spec" }}
+    >
+      A concise language definition, with language-independent test cases.
+    </Card>
+</Home>
