make test-order canonical

--- a/packages/handlebars-ng.knappi.org/src/pages/index.astro
+++ b/packages/handlebars-ng.knappi.org/src/pages/index.astro
@@ -16,7 +16,7 @@ import Home from "@/layouts/Home.astro";
     </Card>
     <Card
       header="Language Specification"
-      action={{ label: "Read the spec", href: "/spec" }}
+      action={{ label: "Read the spec", href: "/spec/" }}
     >
       A concise language definition, with language-independent test cases.
     </Card>
