--- a/packages/handlebars-ng.knappi.org/src/layouts/default/Navbar.astro
+++ b/packages/handlebars-ng.knappi.org/src/layouts/default/Navbar.astro
@@ -12,6 +12,6 @@ const { sidebarEnabled, title } = Astro.props;
   </a>
   <div class="flex flex-col">
     <div class="text-xs">Handlebars - the next generation</div>
-    <div class="font-bold text-lg">{title}</div>
+    <div class="font-bold lg:text-lg">{title}</div>
   </div>
 </div>
