--- a/packages/handlebars-ng.knappi.org/src/components/sidebar/TableOfContents.astro
+++ b/packages/handlebars-ng.knappi.org/src/components/sidebar/TableOfContents.astro
@@ -7,7 +7,7 @@ const specPages = allPages.filter((page) => {
 });
 ---
 
-<ul class="sticky top-1 pl-1">
+<ul class="pl-1">
   {
     specPages.map((page) => {
       return (
