--- a/packages/handlebars-ng.knappi.org/src/layouts/default/DefaultLayout.astro
+++ b/packages/handlebars-ng.knappi.org/src/layouts/default/DefaultLayout.astro
@@ -12,7 +12,7 @@ const sidebarEnabled = Astro.slots.has("sidebar");
 ---
 
 <!DOCTYPE html>
-<html lang="en" class="h-full">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, minimum-scale=1" />
@@ -21,16 +21,14 @@ const sidebarEnabled = Astro.slots.has("sidebar");
     <slot name="additionalHead" />
     <title>{title}</title>
   </head>
-  <body class="max-w-5xl mx-auto h-min-full">
-    <div class="h-min-full flex flex-col lg:shadow-xl">
-      <header class="bg-amber-100 px-4">
-        <Navbar
-          sidebarEnabled={sidebarEnabled}
-          section={section}
-          title={title}
-        />
+  <body>
+    <div class="min-h-screen relative bg-white pb-10">
+      <header class="border-b bg-orange-50">
+        <div class="max-w-5xl mx-auto w-full px-4 py-4 lg:pr-8">
+          <Navbar sidebarEnabled={sidebarEnabled} section={section} />
+        </div>
       </header>
-      <div class="relative h-full bg-white">
+      <div class="max-w-5xl mx-auto relative pb-16 flex-1">
         {
           sidebarEnabled && (
             <aside class="absolute w-0 lg:w-64 overflow-visible h-full">
@@ -40,12 +38,18 @@ const sidebarEnabled = Astro.slots.has("sidebar");
             </aside>
           )
         }
-        <main class="content lg:ml-64  p-4">
+        <main class="content lg:ml-64 p-4 lg:px-8 min-h-full">
           <slot />
         </main>
       </div>
-      <footer class="bg-amber-100 px-4 h-10 flex-shrink-0 flex-grow-0 flex items-center justify-end ">
-        <a href="/impress">Impress</a>
+      <footer
+        class="border-t border-slate-300 bg-slate-100 text-orange-900 flex-shrink-0 flex-grow-0 w-full bottom-0 absolute"
+      >
+        <div
+          class="max-w-5xl mx-auto  w-full py-8 px-4 lg:px-8 flex items-center justify-start h-10"
+        >
+          <a href="/impress">Impress</a>
+        </div>
       </footer>
     </div>
     <script
