allow linking headers in the doc

--- a/packages/handlebars-ng.knappi.org/src/layouts/Home.astro
+++ b/packages/handlebars-ng.knappi.org/src/layouts/Home.astro
@@ -52,7 +52,7 @@ const { title, logo } = Astro.props;
     ></script>
   </body>
 </html>
-<style is:global>
+<style is:global lang="scss">
   html {
     font-family: system-ui, sans-serif;
     background-color: #f6f6f6;
