--- a/packages/handlebars-ng.knappi.org/src/components/WorkInProgress.astro
+++ b/packages/handlebars-ng.knappi.org/src/components/WorkInProgress.astro
@@ -1,7 +1,9 @@
 ---
+import { githubUrl } from "@/constants";
+
 
 ---
 <div class="font-bold bg-red-100 text-red-900 p-2">
     This project is in an early work-in-progress stage.
-    <a class="underline" href="https://github.com/nknapp/handlebars-ng">Contribute</a>
+    <a class="underline" href={githubUrl}>Contribute</a>
 </div>
