--- a/packages/handlebars-ng.knappi.org/src/pages/index.astro
+++ b/packages/handlebars-ng.knappi.org/src/pages/index.astro
@@ -1,26 +1,31 @@
 ---
+import GithubActionsBadge from "@/components/GithubActionsBadge.astro";
 import Card from "@/components/Card.astro";
+import CardContainer from "@/components/CardContainer.astro";
 import Home from "@/layouts/Home.astro";
 ---
 
 <Home title="Handlebars - the next generation" logo="/images/logo-large.png">
-  <Card
-    header="Clear language definition"
-    action={{ label: "To the specification", href: "/spec/" }}
-  >
-    A concise language definition, with language-independent test cases, so you
-    can implement your own compatible parser and runtime.
-  </Card>
-  <Card header="Compatibilty">
-    Parser and runtime are tested against the spec, which is derived from
-    Handlebars 4.x. The new Handlebars should be compatible for most use-cases.
-  </Card>
-  <Card
-    header="Performance"
-    action={{ label: "Benchmarks", href: "/benchmarks/" }}
-  >
-    We use a custom parser and a visitor-based runtime, which should be faster
-    than Handlebars 4.x. Automated performance-tests will be made (TODO) and
-    visualized.
-  </Card>
+  <h1 class="text-4xl mb-4">Why?</h1>
+  <CardContainer>
+    <Card
+      header="Language Specification"
+      action={{ label: "To the specification", href: "/spec/" }}
+    >
+      We build a spec for the Handlebars language. It's test-cases can be
+      used in many programming languages.
+    </Card>
+    <Card
+      header="Performance"
+      action={{ label: "Benchmarks", href: "/benchmarks/" }}
+    >
+      We use a custom parser and a visitor-based runtime, which is faster than
+      Handlebars 4.x.
+    </Card>
+    <Card header="Maintainable">
+      Designed with clean code in mind. Adding features and fixing bugs will be
+      easy in the future.
+    </Card>
+  </CardContainer>
+  <div class="h-30"></div>
 </Home>
