--- a/packages/handlebars-ng.knappi.org/src/components/Footer.astro
+++ b/packages/handlebars-ng.knappi.org/src/components/Footer.astro
@@ -1,9 +1,11 @@
 ---
+import GithubActionsBadge from "./GithubActionsBadge.astro";
 
 const year = new Date().getFullYear()  
 
 ---
 <div class="flex justify-between w-full">
     <div>© {year} Nils Knappmeier, <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a></div>
+    <div><GithubActionsBadge /></div>
     <div><a href="/impress">Impress</a></div>
 </div>
