--- a/packages/handlebars-ng.knappi.org/src/components/GithubActionsBadge.astro
+++ b/packages/handlebars-ng.knappi.org/src/components/GithubActionsBadge.astro
@@ -4,4 +4,4 @@ import { githubUrl } from "@/constants";
 const badgeUrl = `${githubUrl}/actions/workflows/default.yml/badge.svg`
 
 ---
-<img src={badgeUrl} alt="Github Actions Badge"/>
+<a href="https://github.com/nknapp/handlebars-ng/actions"><img src={badgeUrl} alt="Github Actions Badge"/></a>
