--- a/packages/handlebars-ng.knappi.org/src/components/Testcase/SuccessTest.astro
+++ b/packages/handlebars-ng.knappi.org/src/components/Testcase/SuccessTest.astro
@@ -5,6 +5,7 @@ import prettier from "prettier";
 import { Code } from "astro/components";
 import Tabs from "./Tabs.astro";
 import Ast from "./Ast.astro";
+import { helpers } from "./helpers";
 
 interface Props {
   spec: SuccessTest;
@@ -29,15 +30,40 @@ const prettyInput = prettier.format(JSON.stringify(spec.input), {
       <div class="invisible-chars" title={JSON.stringify(spec.template)}>
         <Code code={spec.template} lang="handlebars" />
       </div>
-      {spec.originalAst && <div class="text-red-600 mb-2">Warning: The original Handlebars implementation has a
-        deviating AST (which the author of this document
-        considers to be wrong):</div>}
+      {
+        spec.originalAst && (
+          <div class="text-red-600 mb-2">
+            Warning: The original Handlebars implementation has a deviating AST
+            (which the author of this document considers to be wrong):
+          </div>
+        )
+      }
       <div>
         <Tabs>
           <header>Input / Output</header>
           <div title={JSON.stringify(spec.output)}>
             <header>Input</header>
             <div><Code code={prettyInput.trim()} lang={"json"} /></div>
+            {
+              spec.helpers != null && (
+                <>
+                  <header>Helpers</header>
+                  <table>
+                    {Object.entries(spec.helpers).map(
+                      ([name, helperFromSpec]) => {
+                        return (
+                          <tr>
+                            <td>{name}</td>
+                            <td>{helpers[helperFromSpec].description}</td>
+                          </tr>
+                        );
+                      }
+                    )}
+                  </table>
+                </>
+              )
+            }
+
             <header>Output</header>
             <div class="invisible-chars"><Code code={spec.output} /></div>
           </div>
